update spigot version checker for java 21