@@ -3,7 +3,7 @@ package tntrun;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import org.bukkit.Bukkit;
 
 public class VersionChecker {
@@ -20,7 +20,7 @@ public class VersionChecker {
 
 	public String getVersion() {
 		try {
-			HttpURLConnection con = (HttpURLConnection) new URL("https://api.spigotmc.org/legacy/update.php?resource=53359").openConnection();
+			HttpURLConnection con = (HttpURLConnection) new URI("https://api.spigotmc.org/legacy/update.php?resource=53359").toURL().openConnection();
 			con.setDoOutput(true);
 			con.setRequestMethod("GET");
 			String version = new BufferedReader(new InputStreamReader(con.getInputStream())).readLine();
